@@ -35,6 +35,11 @@
                 android:id="@+id/menu_stats"
                 android:icon="@drawable/icon_menu_statistics"
                 android:title="@string/statistics" />
+            <!-- menu_domogik_admin -->
+            <item
+                android:id="@+id/menu_domogik_admin"
+                android:icon="@drawable/icon_menu_butler"
+                android:title="@string/domogik_admin_page" />
             <!-- menu_about -->
             <item
                 android:id="@+id/menu_about"
