@@ -773,4 +773,5 @@
     <string name="sms_not_sended">SMS pas envoyé</string>
     <string name="too_many_sms_were_sent_in_too_little_time.">Trop de sms envoyé en trop peu de temps.</string>
     <string name="loading_data_from_rest">Chargement des valeurs depuis rest....</string>
+    <string name="domogik_admin_page">Administration de domogik</string>
 </resources>
