@@ -22,6 +22,8 @@
     $ 1.4
       % Version 28
       _ 2017-xx-xx
+      * In menu add a link to open a webview to domogik's admin page
+      * Start working on #124
       * Close #137 Crash if mq if bad configured
       * Close #136 MQ Sub port from QRCODE not handle correctly.
       % Version 27
